# crashdump_viewer_cli

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
sample_dumps/: erl_crash_simple.dump
src/: app.rs  event.rs  handler.rs  main.rs  parser.rs  tui.rs  ui.rs
src/parser/: mod.rs  parser.rs  types.rs
