[package]
name = "crashdump_parser_cli"
version = "0.1.0"
authors = ["Peixian Wang <pxw@meta.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
clap = { version = "4.5.26", features = ["derive"] }
rayon = "1.10.0"
