[package]
name = "crashdump_parser_cli"
version = "0.1.0"
authors = ["Peixian Wang <pxw@meta.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
clap = { version = "4.5.26", features = ["derive"] }
rayon = "1.10.0"
color-eyre = "0.6.3"
strum = "0.27"
strum_macros = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
grep = "0.2"
regex = "1.11.1"
tui-tree-widget = "0.23.0"
base64 = "0.22.1"
